--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "reaction_profile_plotter"
+name = "profile_plotter"
 version = "1.0.0"
 description = "Plot reaction profiles with customizable curves and labels"
 authors = [{name = "Dr A Goodfellow"}]
@@ -12,6 +12,9 @@ python = "^3.8"
 matplotlib = "^3.7"
 numpy = "^1.23"
 scipy = "^1.10"
+
+[tool.poetry]
+packages = [{include = "plotProfile", from = "src"}]
 
 [build-system]
 requires = ["setuptools", "wheel"]
